# stm32-firmware

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh  clean-debugger.sh  debug-stm32f3.sh  flash-stm32f3.sh  reset-board.sh  st  vars.sh
arch/arm-cortex-m4/: CMakeLists.txt  core_cm4.h  core_cm4_simd.h  core_cmInstr.h
cmake/: common.cmake  compile-flags-config.cmake  gcc.cmake  stm32f303-config.cmake  utils..cmake
cmake/toolchain/: gcc.cmake  llvm.cmake  sysroot.cmake
platform/stm32f30x/: CMakeLists.txt  stm32f30x.h  stm32f30x_conf.h  system_stm32f30x.c  system_stm32f30x.h
platform/stm32f30x/startup/: startup_stm32f30x.s
sample/: CMakeLists.txt  main.c
src/: CMakeLists.txt  main.c  newlib.c  newlib.h  platform_config.h  startup_stm32f30x.s  stm32f303.ld  stm32f30x.h
tools/arm-gnu-toolchain-15.2.rel1-x86_64-arm-none-eabi/arm-none-eabi/lib/: libstdc++.modules.json
tools/arm-gnu-toolchain-15.2.rel1-x86_64-arm-none-eabi/arm-none-eabi/lib/ldscripts/: armelf.xbn  armelf.xcer  armelf.xd  armelf.xdc  armelf.xde  armelf.xder  armelf.xdw  armelf.xdwer  armelf.xer  armelf.xsc  armelf.xscer  armelf.xse  armelf.xser  armelf.xsw  armelf.xswe  armelf.xswer
tools/arm-gnu-toolchain-15.2.rel1-x86_64-arm-none-eabi/share/doc/cpp/: Alternatives-to-Wrapper-_0023ifndef.html  Argument-Prescan.html  Binary-Resource-Inclusion.html  C_002b_002b-Named-Operators.html  Concept-Index.html  Conditional-Syntax.html  Conditional-Uses.html  Defined.html  Directives-Within-Macro-Arguments.html  Duplication-of-Side-Effects.html  Environment-Variables.html  Function_002dlike-Macros.html  GNU-Free-Documentation-License.html  Identifier-characters.html  Ifdef.html  Implementation-Details.html  Implementation-limits.html  Index-of-Directives.html  Invocation.html  Line-Control.html  Macro-Arguments.html  Misnesting.html  Newlines-in-Arguments.html  Object_002dlike-Macros.html  Operator-Precedence-Problems.html  Option-Index.html  Other-Directives.html  Overview.html  Pragmas.html  Preprocessor-Output.html  Self_002dReferential-Macros.html  Standard-Predefined-Macros.html  System_002dspecific-Predefined-Macros.html  The-preprocessing-language.html  Tokenization.html  Traditional-Mode.html  Traditional-lexical-analysis.html  Traditional-warnings.html  Variadic-Macros.html  Wtrigraphs.html  (+4 more)
tools/arm-gnu-toolchain-15.2.rel1-x86_64-arm-none-eabi/share/doc/gcc/: AArch64-Built_002din-Functions.html  AArch64-Function-Attributes.html  AMD-GCN-Function-Attributes.html  AMD-GCN-Options.html  ARC-Options.html  ARC-Variable-Attributes.html  ARM-C-Language-Extensions-_0028ACLE_0029.html  ARM-Options.html  ARM-Pragmas.html  ARM-Type-Attributes.html  AVR-Built_002din-Functions.html  Actual-Bugs.html  Adapteva-Epiphany-Options.html  Alignment.html  Alpha-Built_002din-Functions.html  Alternate-Keywords.html  Architecture-implementation.html  Arrays-and-pointers-implementation.html  Asm-Labels.html  Assembler-Options.html  Attributes.html  Backwards-Compatibility.html  Basic-Asm.html  Basic-PowerPC-Built_002din-Functions-Available-on-ISA-2_002e06.html  Basic-PowerPC-Built_002din-Functions-Available-on-ISA-2_002e07.html  Basic-PowerPC-Built_002din-Functions-Available-on-ISA-3_002e1.html  Basic-PowerPC-Built_002din-Functions.html  Binary-constants.html  Blackfin-Function-Attributes.html  Boolean-Type.html  Bound-member-functions.html  Byte_002dSwapping-Builtins.html  C-Extensions.html  C-Implementation.html  C6X-Options.html  CORE_002dV-Built_002din-Functions.html  CRC-Builtins.html  CRIS-Options.html  C_002b_002b-Dialect-Options.html  C_002b_002b-Implementation.html  (+192 more)
tools/arm-gnu-toolchain-15.2.rel1-x86_64-arm-none-eabi/share/doc/gccint/: Accessors.html  Adding-new-DECL-node-types.html  Aggregate-Return.html  Alias-analysis.html  Alignment-of-poly_005fints.html  All-Debuggers.html  Annotations.html  Arithmetic.html  Assembler-Format.html  Assembler.html  Attr-Example.html  BTF-Debug.html  Back-End.html  Basic-Statements.html  Bit_002dFields.html  C-Constraint-Interface.html  C-Tests.html  C-and-C_002b_002b-Trees.html  CTF-Debug.html  C_002b_002b-ABI.html  C_002b_002b-Expressions.html  Caller-Saves.html  Calls.html  Changing-Multiple-RTL-SSA-Instructions.html  Changing-One-RTL-SSA-Instruction.html  Changing-RTL-Instructions.html  Checking-for-a-poly_005fint-marker-value.html  Class-Preferences.html  Class-hierarchy-of-GIMPLE-statements.html  Code-Iterators.html  Collect2.html  Compact-Syntax.html  Comparing-ordered-poly_005fints.html  Comparisons-involving-poly_005fint.html  Compound-Expressions.html  Computing-bounds-on-poly_005fints.html  Concept-Index.html  Config-Fragments.html  Configure-Terms.html  Consequences-of-using-poly_005fint.html  (+200 more)
tools/arm-gnu-toolchain-15.2.rel1-x86_64-arm-none-eabi/share/doc/gdb/: Architectures.html  Automatically.html  Branch-Trace-Configuration-Format.html  Bug-Reporting.html  Built_002dIn-Func_002fProc.html  Calling.html  Command-aliases-default-args.html  Commands-For-History.html  Compiling-and-Injecting-Code.html  Concept-Index.html  Config-Names.html  Context-management.html  Decimal-Floating-Point.html  Forks.html  General-Query-Packets.html  Guile.html  Help.html  Index-Files.html  Lazy-Strings-In-Python.html  Maintenance-Commands.html  Memory-Region-Attributes.html  Missing-Debug-Info-In-Python.html  Missing-Objfiles-In-Python.html  Modifiers.html  Objfile_002ebuild_005fid.html  Objfiles-In-Python.html  Omissions-from-Ada.html  Output-Styling.html  Packets.html  Parameters-In-Guile.html  PowerPC.html  Process-Information.html  Python-API.html  RISC_002dV-Features.html  Readline-Killing-Commands.html  Recordings-In-Python.html  Running-Configure.html  S12Z.html  S_002f390-and-System-z-Features.html  (+14 more)
tools/arm-gnu-toolchain-15.2.rel1-x86_64-arm-none-eabi/share/info/: gcc.info  gccint.info  gdb.info  ld.info  sframe-spec.info
tools/linux-x86_64/arm-gnu-toolchain-15.2.rel1-x86_64-arm-none-eabi/: 15.2.rel1-x86_64-arm-none-eabi-manifest.txt
(+1130 files in other folders)
